--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,9 @@
     <!-- if you need to import js scripts do it here -->
   </head>
   <body>
-
+    <video class="camera-video" id="camera-video" autoplay></video>
+    <canvas class="video-canvas" id="video-canvas"></canvas>
+    <canvas class="maze-canvas" id="maze-canvas"></canvas>
     <!-- WEBPACK will inject the bundle.js here -->
   </body>
 </html>
