implementação do trabalho em JS

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FXHASH project</title>
+    <title>Self-portrait in a maze</title>
     <meta charset="utf-8">
     <script id="fxhash-snippet">
       //---- do not edit the following code (you can indent as you wish)
@@ -42,6 +42,7 @@
   <body>
     <video class="camera-video" id="camera-video" autoplay></video>
     <canvas class="video-canvas" id="video-canvas"></canvas>
+    <div class="video-overlay"></div>
     <canvas class="maze-canvas" id="maze-canvas"></canvas>
     <!-- WEBPACK will inject the bundle.js here -->
   </body>
